[build-system]
requires = [
	"flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "search"
authors = [{name = "Tracy Lou", email = "tracy.lou@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "networkx"
]

[project.urls]
Home = "https://github.com/tlouskt/HW2-BFS"
